5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1680_2471.log
== TEST (2019-04-30 22:59:14) 
-- CODE:
idade = int(input("idade da pessoa:"))
imc = float(input("imc da pessoa:"))

print("Entradas:",idade,"anos e IMC"imc)

-- ERROR:
File "XXXX", line 4
    print("Entradas:",idade,"anos e IMC"imc)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 22:59:36) 
-- CODE:
idade = int(input("idade da pessoa:"))
imc = float(input("imc da pessoa:"))

print("Entradas:",idade,"anos e IMC",imc)

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 23:03:03) 
-- CODE:
idade = int(input("idade da pessoa:"))
imc = float(input("imc da pessoa:"))

print("Entradas:",idade,"anos e IMC",imc)
if(idade <= 0 or idade > 130 or imc <= o):
	print("Dados invalidos")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 23:10:33) 
-- CODE:
idade = int(input("idade da pessoa:"))
imc = float(input("imc da pessoa:"))

print("Entradas:",idade,"anos e IMC",imc)
if(idade <= 0 or idade > 130 or imc <= o):
	print("Dados invalidos")
	
elif(idade < 45 and imc < 22.0):
	print("Baixo")
elif(idade < 45 and imc >= 22.0):
	print("Medio")
elif(idade >= 45 and imc < 22.0):
	print("Medio")
elif(idade >= 45 and imc >= 22.0):
	print("Alto")
-- EXECUTION TIME:
0.18634
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 23:11:17) 
-- CODE:
idade = int(input("idade da pessoa:"))
imc = float(input("imc da pessoa:"))

print("Entradas:",idade,"anos e IMC",imc)
if(idade <= 0 or idade > 130 or imc <= o):
	print("Dados invalidos")
	
elif(idade < 45 and imc < 22.0):
	print("Baixo")
elif(idade < 45 and imc >= 22.0):
	print("Medio")
elif(idade >= 45 and imc < 22.0):
	print("Medio")
elif(idade >= 45 and imc >= 22.0):
	print("Alto")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 23:12:26) 
-- CODE:
idade = int(input("idade da pessoa:"))
imc = float(input("imc da pessoa:"))

print("Entradas:",idade,"anos e IMC",imc)
if(idade <= 0 or idade > 130 or imc <= 0):
	print("Dados invalidos")
	
elif(idade < 45 and imc < 22.0):
	print("Baixo")
elif(idade < 45 and imc >= 22.0):
	print("Medio")
elif(idade >= 45 and imc < 22.0):
	print("Medio")
elif(idade >= 45 and imc >= 22.0):
	print("Alto")
-- EXECUTION TIME:
0.168617
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 23:12:30) 
-- CODE:
idade = int(input("idade da pessoa:"))
imc = float(input("imc da pessoa:"))

print("Entradas:",idade,"anos e IMC",imc)
if(idade <= 0 or idade > 130 or imc <= 0):
	print("Dados invalidos")
	
elif(idade < 45 and imc < 22.0):
	print("Baixo")
elif(idade < 45 and imc >= 22.0):
	print("Medio")
elif(idade >= 45 and imc < 22.0):
	print("Medio")
elif(idade >= 45 and imc >= 22.0):
	print("Alto")
-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 23:13:36) 
-- CODE:
idade = int(input("idade da pessoa:"))
imc = float(input("imc da pessoa:"))

print("Entradas:",idade,"anos e IMC",imc)
if(idade <= 0 or idade > 130 or imc <= 0):
	print("Dados invalidos")
	
elif(idade < 45 and imc < 22.0):
	print("Baixo")
elif(idade < 45 and imc >= 22.0):
	print("Medio")
elif(idade >= 45 and imc < 22.0):
	print("Medio")
elif(idade >= 45 and imc >= 22.0):
	print("Alto")
-- EXECUTION TIME:
0.148264
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 23:15:25) 
-- CODE:
idade = int(input("idade da pessoa:"))
IMC = float(input("IMC da pessoa:"))

print("Entradas:",idade,"anos e IMC",imc)
if(idade <= 0 or idade > 130 or IMC <= 0):
	print("Dados invalidos")
	
elif(idade < 45 and IMC < 22.0):
	print("Baixo")
elif(idade < 45 and IMC >= 22.0):
	print("Medio")
elif(idade >= 45 and IMC < 22.0):
	print("Medio")
elif(idade >= 45 and IMC >= 22.0):
	print("Alto")
-- EXECUTION TIME:
0.130805
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1680/2471/main.py", line 4, in <module>
    print("Entradas:",idade,"anos e IMC",imc)
NameError: name 'imc' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 23:17:32) 
-- CODE:
idade = int(input("idade da pessoa:"))
IMC = float(input("IMC da pessoa:"))

print("Entradas:",idade,"anos e IMC",imc)
if(idade <= 0 or idade > 130 or IMC <= 0):
	print("Dados invalidos")
	
elif(idade < 45 and IMC < 22.0):
	print("Risco: Baixo")
elif(idade < 45 and IMC >= 22.0):
	print("Risco: Medio")
elif(idade >= 45 and IMC < 22.0):
	print("Risco: Medio")
elif(idade >= 45 and IMC >= 22.0):
	print("Risco: Alto")
-- EXECUTION TIME:
0.159065
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1680/2471/main.py", line 4, in <module>
    print("Entradas:",idade,"anos e IMC",imc)
NameError: name 'imc' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 23:20:21) 
-- CODE:
idade = int(input("idade da pessoa:"))
IMC = float(input("IMC da pessoa:"))

print("Entradas:",idade,"anos e IMC",imc)
if(idade <= 0 or idade > 130 or IMC <= 0):
	print("Dados invalidos")
	
elif(idade < 45 and IMC < 22.0):
	print("Risco:","Baixo")
elif(idade < 45 and IMC >= 22.0):
	print("Risco:","Medio")
elif(idade >= 45 and IMC < 22.0):
	print("Risco:","Medio")
elif(idade >= 45 and IMC >= 22.0):
	print("Risco:","Alto")
-- EXECUTION TIME:
0.187249
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1680/2471/main.py", line 4, in <module>
    print("Entradas:",idade,"anos e IMC",imc)
NameError: name 'imc' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 23:21:39) 
-- CODE:
idade = int(input("idade da pessoa:"))
IMC = float(input("IMC da pessoa:"))

print("Entradas:",idade,"anos e IMC",imc)
if(idade <= 0 or idade > 130 or IMC <= 0):
	print("Dados invalidos")
	
elif(idade < 45 and IMC < 22.0):
	print("Risco:","Baixo")
elif(idade < 45 and IMC >= 22.0):
	print("Risco:","Medio")
elif(idade >= 45 and IMC < 22.0):
	print("Risco:","Medio")
elif(idade >= 45 and IMC >= 22.0):
	print("Risco:","Alto")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print("Entradas:",idade,"anos e IMC",imc)
NameError: name 'imc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 23:23:58) 
-- CODE:
idade = int(input("idade da pessoa:"))
IMC = float(input("IMC da pessoa:"))

print("Entradas:",idade,"anos e IMC",IMC)
if(idade <= 0 or idade > 130 or IMC <= 0):
	print("Dados invalidos")
	
elif(idade < 45 and IMC < 22.0):
	print("Risco:","Baixo")
elif(idade < 45 and IMC >= 22.0):
	print("Risco:","Medio")
elif(idade >= 45 and IMC < 22.0):
	print("Risco:","Medio")
elif(idade >= 45 and IMC >= 22.0):
	print("Risco:","Alto")
-- EXECUTION TIME:
0.172325
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
